# MultiScope

./: .gitignore  CMakeLists.txt  README.md  Widget.cpp  Widget.h  Widget.ui
